maas-bueromoebel/maas-bueromoebel-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: maas-bueromoebel
  namespace: maas-bueromoebel
spec:
  selector:
    app: maas-bueromoebel
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
